--- a/ProgTestStudio/ProgTestStudio.csproj
+++ b/ProgTestStudio/ProgTestStudio.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActionFlowControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ActionFlowControl.Designer.cs">
+      <DependentUpon>ActionFlowControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="ActionListTreeView.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -64,21 +70,27 @@
     <Compile Include="ArrowControl.Designer.cs">
       <DependentUpon>ArrowControl.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Main.Designer.cs">
+      <DependentUpon>Main.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UIActionControl.cs">
+    <Compile Include="ActionControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="UIActionControl.Designer.cs">
-      <DependentUpon>UIActionControl.cs</DependentUpon>
+    <Compile Include="ActionControl.Designer.cs">
+      <DependentUpon>ActionControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TestTab.cs">
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="UITestPanel.cs" />
+    <EmbeddedResource Include="ActionFlowControl.resx">
+      <DependentUpon>ActionFlowControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ActionListTreeView.resx">
       <DependentUpon>ActionListTreeView.cs</DependentUpon>
     </EmbeddedResource>
@@ -88,8 +100,8 @@
     <EmbeddedResource Include="ArrowControl.resx">
       <DependentUpon>ArrowControl.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Main.resx">
+      <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -101,8 +113,8 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="UIActionControl.resx">
-      <DependentUpon>UIActionControl.cs</DependentUpon>
+    <EmbeddedResource Include="ActionControl.resx">
+      <DependentUpon>ActionControl.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
