Added models, hintTextBox, and base of action editor form is complete.

--- a/ProgTestStudio/ProgTestStudio.csproj
+++ b/ProgTestStudio/ProgTestStudio.csproj
@@ -70,6 +70,9 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Model\ActionBase.cs" />
+    <Compile Include="Model\RestAction.cs" />
+    <Compile Include="Model\SqlAction.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UIActionControl.cs">
@@ -79,6 +82,9 @@
       <DependentUpon>UIActionControl.cs</DependentUpon>
     </Compile>
     <Compile Include="UITestPanel.cs" />
+    <Compile Include="View\HintTextBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <EmbeddedResource Include="ActionListTreeView.resx">
       <DependentUpon>ActionListTreeView.cs</DependentUpon>
     </EmbeddedResource>
@@ -119,6 +125,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\PNGPIX-COM-Arrow-Transparent-PNG-Image-3-500x391.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Controller\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
