constants, action type names

--- a/ProgTestStudio/ProgTestStudio.csproj
+++ b/ProgTestStudio/ProgTestStudio.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Main.Designer.cs">
       <DependentUpon>Main.cs</DependentUpon>
     </Compile>
+    <Compile Include="Model\Constants.cs" />
     <Compile Include="Model\TestAction.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
