export, wire up create custom control, outwindow color scheme

--- a/ProgTestStudio/ProgTestStudio.csproj
+++ b/ProgTestStudio/ProgTestStudio.csproj
@@ -56,6 +56,7 @@
     <Compile Include="AboutForm.Designer.cs">
       <DependentUpon>AboutForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="ActionCategoryNode.cs" />
     <Compile Include="ActionEditor_Assert.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -92,6 +93,7 @@
     <Compile Include="ActionEditor.Designer.cs">
       <DependentUpon>ActionEditor.cs</DependentUpon>
     </Compile>
+    <Compile Include="ActionTreeNode.cs" />
     <Compile Include="ArrowControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -155,6 +157,8 @@
     <None Include="Resources\iconfinder_language_326663 %281%291.png" />
     <Content Include="Resources\iconfinder_Sql_file_database_extension_data_3876341.png" />
     <None Include="Resources\iconfinder_Sql_file_database_extension_data_38763411.png" />
+    <Content Include="SampleExports\sample.java" />
+    <None Include="SampleExports\sample.py" />
     <Content Include="SampleExports\sample.cs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
